# 12-factor-demo

./: .gitignore  README.md
factor-01/: README.md  requirements.txt  youtube.md
factor-01/01-no-tools/: README.md
factor-01/02-single-tool/: PROJECT.md  README.md  cloud_bucket_creator.py
factor-01/03-workflow/: README.md
factor-02/01-crewai/chatbot/: INSTALL.md  README.md  pyproject.toml  report.md  run_chatbot.py
factor-02/01-crewai/chatbot/knowledge/: argocd.md  blue-green-deployment.md  code-review-guidelines.md  database-outage.md  error-rate-runbook.md  kubernetes-cluster-setup.md
factor-02/01-crewai/chatbot/src/chatbot/: crew.py  main.py
factor-02/01-crewai/chatbot/src/chatbot/config/: agents.yaml  api_config.py  tasks.yaml
factor-03/: README.md  analysis.py  analyze_results.py  evaluation.py  factor3_results_20250603_092705.json  factor3_test.py  formatters.py  models.py  requirements.txt  scenarios.json  youtube-details.md  youtube-outline.md  youtube.md
factor-03/demo-01/: README.md  llm_context.py  main.py  requirements.txt
factor-1/: README.md  YOUTUBE.md  YOUTUBE_SCRIPT_PROPOSALS.md  cloud_bucket_creator.py  youtube.md
factor-1/promptWithDefaults/: PROJECT.md  README.md  STAGE-1.md  STAGE-3.md  cloud_bucket_creator.py  requirements.txt
factor-1/simplePrompt/: simple_prompt.py
factor-1/stage-1/: simple_prompt.py  simple_prompt_dan.py
factor-1/stage-2/: PROJECT.md  STAGE-2.md  cloud_bucket_creator.py  requirements.txt
factor-1/stage-3/: use_tools.py  use_tools_dan.py
