[project]
name = "chatbot"
version = "0.1.0"
description = "chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "langchain-openai>=0.1.1",
    "python-dotenv>=1.0.0",
    "langfuse>=0.1.0",
    "openlit>=0.1.0",
]

[project.scripts]
chatbot = "chatbot.main:process_command_line"
devops-assistant = "chatbot.main:process_command_line"
run_crew = "chatbot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
